--- a/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
@@ -14,7 +14,7 @@
                     <BarItem>
                         <BarLink To="">
                             <BarIcon IconName="@("fa-magic")" />
-                            Binance Magic
+                            Crypto Magic
                         </BarLink>
                     </BarItem>
                 </BarBrand>
