--- a/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
+++ b/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
@@ -10,7 +10,7 @@
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <title>Binance Magic</title>
+        <title>Crypto Magic</title>
         <base href="~/"/>
         
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
