--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffEdit.razor
@@ -1,13 +1,13 @@
-﻿@page "/simple/edit/{id?}"
+﻿@page "/one-off/edit/{id?}"
 
-@inherits EditBase<SimpleTrading> 
+@inherits EditBase<OneOffTrading> 
 
 <Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
 <Row>
     <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet">
         <Card Margin="Margin.Is4">
             <CardHeader>
-                <CardTitle>@(Id == null ? "Add new simple trade" : "Edit simple trade")</CardTitle>
+                <CardTitle>@(Id == null ? "Add new one-off trade" : "Edit one-off trade")</CardTitle>
             </CardHeader>
                 <CardBody>
                     <Validation Validator="@ValidationRule.IsNotEmpty">
@@ -21,6 +21,7 @@
                                     <ValidationError>Enter name for trade.</ValidationError>
                                 </Feedback>                            
                             </TextEdit>
+                            @* <FieldHelp>A name that represents the circular trade.</FieldHelp> *@
                         </Field>
                     </Validation>
                     
