--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
@@ -7,7 +7,7 @@
     <Column ColumnSize="ColumnSize.IsFull.OnMobile.IsHalf.OnTablet">
         <Card Margin="Margin.Is4">
             <CardHeader>
-                <CardTitle>@(Id == null ? "Add new simple trade" : "Edit simple trade")</CardTitle>
+                <CardTitle>@(Id == null ? "Add new simple trade" : "Change simple trade")</CardTitle>
             </CardHeader>
                 <CardBody>
                     <Validation Validator="@ValidationRule.IsNotEmpty">
