--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
@@ -18,9 +18,7 @@
                                 Placeholder="Enter name" 
                                 Autofocus="true"
                                 @bind-Text="@Model.Name">
-                                <Feedback>
-                                    <ValidationError>Enter name for trade.</ValidationError>
-                                </Feedback>                            
+                                <FieldHelp>The name with which the trade should be identified.</FieldHelp>
                             </TextEdit>
                             @* <FieldHelp>A name that represents the circular trade.</FieldHelp> *@
                         </Field>
@@ -33,9 +31,7 @@
                                 Placeholder="Symbol" 
                                 Autofocus="true"
                                 @bind-Text="@Model.FirstSymbol">
-                                <Feedback>
-                                    <ValidationError>Enter the first symbol to use for the trade.</ValidationError>
-                                </Feedback>                            
+                                <FieldHelp>The first symbol to use for the trade.</FieldHelp>
                             </TextEdit>
                         </Field>
                     </Validation>
@@ -47,19 +43,77 @@
                                 Placeholder="Symbol" 
                                 Autofocus="true"
                                 @bind-Text="@Model.SecondSymbol">
-                                <Feedback>
-                                    <ValidationError>Enter the second symbol to use for the trade.</ValidationError>
-                                </Feedback>                            
+                                <FieldHelp>The second symbol to use for the trade.</FieldHelp>
                             </TextEdit>
                         </Field>
                     </Validation>
 
                     <Validation Validator="@ValidationRule.None">
+                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
+                            <FieldLabel>Target increase</FieldLabel>
+                            <NumericEdit 
+                                Placeholder="Target increase in %" 
+                                Autofocus="true"
+                                @bind-Value="@TargetIncreaseInPercentage"
+                                Min="1"
+                                Max="100">
+                                <FieldHelp>The target increase that should be aimed for each cycle.</FieldHelp>
+                            </NumericEdit>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@ValidationRule.None">
+                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
+                            <FieldLabel>Initial sell factor</FieldLabel>
+                            <NumericEdit 
+                                Placeholder="Initial sell factor in %" 
+                                Autofocus="true"
+                                @bind-Value="@InitialSellFactorInPercentage"
+                                Min="50"
+                                Max="150">
+                                <FieldHelp>The initial sell factor that will  be used to run the first cycle with.
+                                </FieldHelp>
+                            </NumericEdit>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@ValidationRule.None">
+                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
+                            <FieldLabel>Max quantity to trade</FieldLabel>
+                            <NumericEdit 
+                                Placeholder="Max quantity to trade in %" 
+                                Autofocus="true"
+                                @bind-Value="@MaxQuantityToTradeInPercentage"
+                                Min="50"
+                                Max="100">
+                                <FieldHelp>The maximum percentage of the previous purchase to trade with in the next cycle.
+                                </FieldHelp>
+                            </NumericEdit>
+                        </Field>
+                    </Validation>
+
+                    <Validation Validator="@ValidationRule.None">
+                        <Field ColumnSize="ColumnSize.IsQuarter.OnTablet.IsHalf.OnMobile">
+                            <FieldLabel>Notional minimal correction</FieldLabel>
+                            <NumericEdit 
+                                Placeholder="Notional minimal correction %"
+                                Autofocus="true"
+                                @bind-Value="@NotionalMinCorrectionInPercentage"
+                                Min="100"
+                                Max="150">
+                                <FieldHelp>The percentage correction to ensure trades stay above the notional minimum value to be traded.
+                                </FieldHelp>
+                            </NumericEdit>
+                        </Field>
+                    </Validation>
+                    
+                    <Validation Validator="@ValidationRule.None">
                         <Field ColumnSize="ColumnSize.IsHalf.OnTablet.IsHalf.OnMobile">
                             <FieldLabel>Connectivity</FieldLabel>
-                            <RadioGroup TValue="Connectivity" @bind-CheckedValue="@Model.Connectivity">
+                            <RadioGroup TValue="Connectivity" @bind-CheckedValue="@Model.Connectivity" Orientation="Orientation.Vertical">
                                 <Radio TValue="Connectivity" Value="@(Connectivity.BackTest)">Backtest</Radio>
                                 <Radio TValue="Connectivity" Value="@(Connectivity.Binance)">Interact with Binance</Radio>
+                                <Radio TValue="Connectivity" Value="@(Connectivity.Test)">Test calls to Binance</Radio>
                             </RadioGroup>
                         </Field>
                     </Validation>
