--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
@@ -1,51 +1,68 @@
 ﻿@page "/simple/view/{id?}"
 
-@inject AlgorithmRunnerService _algorithmRunnerService
+@inherits ViewBase<SimpleTrading>
 
-<ul class="nav nav-tabs">
-@foreach (var experiment in _experiments)
-{
-    <li class="nav-item">
-        <a class="nav-link @(experiment.IsActive ? "active" : "")" href="#" @onclick="@(() => SelectExperiment(experiment.Name))">@experiment.Name</a>
-    </li>
-}
-</ul>
-
-@if (_currentExperiment == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <Transaction Title="Current experiment"/>
-
-    @foreach (var _ in _currentExperiment.Steps.Skip(1))
-    {
-        <Transaction Title="How is Blazor working for you?"/>
-    }
-}
-@* { *@
-@*      *@
-@*     <table class="table"> *@
-@*         <thead> *@
-@*         <tr> *@
-@*             <th>Date</th> *@
-@*             <th>Temp. (C)</th> *@
-@*             <th>Temp. (F)</th> *@
-@*             <th>Summary</th> *@
-@*         </tr> *@
-@*         </thead> *@
-@*         <tbody> *@
-@*         @foreach (var forecast in _forecasts) *@
-@*         { *@
-@*             <tr> *@
-@*                 <td>@forecast.Date.ToShortDateString()</td> *@
-@*                 <td>@forecast.TemperatureC</td> *@
-@*                 <td>@forecast.TemperatureF</td> *@
-@*                 <td>@forecast.Summary</td> *@
-@*             </tr> *@
-@*         } *@
-@*         </tbody> *@
-@*     </table> *@
+<Row Margin="Margin.Is4">
+    <Column ColumnSize="ColumnSize.Is1">
+        <Button Color="Color.Primary">
+            <Icon Name="IconName.Pause" />
+            Pause
+        </Button>
+    </Column>
+    <Column ColumnSize="ColumnSize.Is1">
+        <Blazorise.Button Color="Color.Secondary" Type="ButtonType.Link" To="@($"/simple/edit/{Id}")">
+            <Icon Name="@("fa-wrench")"/>
+            Change
+        </Blazorise.Button>
+    </Column>
+</Row>
+<Row>
+    <Column ColumnSize="ColumnSize.Is4.OnDesktop.IsAuto.OnTablet">
+        <Card>
+            <CardHeader>@Model.Name</CardHeader>
+            <Table>
+                <TableBody>
+                    <TableRow>
+                        <TableRowCell>Last success: </TableRowCell><TableRowCell>@Current.LastSuccess</TableRowCell>
+                        <TableRowCell>Profit:</TableRowCell><TableRowCell>@Current.Profit</TableRowCell>
+                        <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+                    </TableRow>
+                    <TableRow>
+                        <TableRowCell>Last check: </TableRowCell><TableRowCell>@Current.LastCheck</TableRowCell>
+                        <TableRowCell>Result:</TableRowCell><TableRowCell>@Current.Result</TableRowCell>
+                        <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+                    </TableRow>
+                    <TableRow>
+                        <TableRowCell>Next check: </TableRowCell><TableRowCell>@Current.NextCheck</TableRowCell>
+                        <TableRowCell>Step:</TableRowCell><TableRowCell>@Current.Step</TableRowCell>
+                        <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+                    </TableRow>
+                </TableBody>
+            </Table>
+        </Card>        
+    </Column>
+    <Column ColumnSize="ColumnSize.Is8.OnDesktop.IsAuto.OnTablet">
+        <Card>
+            <CardHeader>Current cycle</CardHeader>
+              <Table>
+                    <TableBody>
+                        <TableRow>
+                            <TableRowCell>Sell: </TableRowCell><TableRowCell>@Current.Sell</TableRowCell>
+                            <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Current.SellQuantity</TableRowCell>
+                            <TableRowCell>Trend: </TableRowCell><TableRowCell>@Current.SellTrend</TableRowCell>
+                        </TableRow>
+                        <TableRow>
+                            <TableRowCell>Buy: </TableRowCell><TableRowCell>@Current.Buy</TableRowCell>
+                            <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Current.BuyQuantity</TableRowCell>
+                            <TableRowCell>Trend: </TableRowCell><TableRowCell>@Current.BuyTrend</TableRowCell>
+                        </TableRow>
+                        <TableRow>
+                            <TableRowCell>Diff: </TableRowCell><TableRowCell>@Current.Diff</TableRowCell>
+                            <TableRowCell>Target: </TableRowCell><TableRowCell>@Current.Target</TableRowCell>
+                            <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
+                        </TableRow>
+                    </TableBody>
+                </Table>
+        </Card>        
+    </Column>
+</Row>
