--- a/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
+++ b/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
@@ -1,5 +1,7 @@
 ﻿@page "/settings"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inject IJSRuntime _jsRuntime;
 
 <Validations @ref="_validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@_editContext">
