--- a/EtAlii.BinanceMagic.Service/Shared/Error.cshtml
+++ b/EtAlii.BinanceMagic.Service/Shared/Error.cshtml
@@ -1,5 +1,7 @@
 ﻿@page
-@model EtAlii.BinanceMagic.Service.Shared.ErrorModel
+@model EtAlii.BinanceMagic.Service.ErrorModel
+
+@namespace EtAlii.BinanceMagic.Service
 
 <!DOCTYPE html>
 <html lang="en">
