--- a/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/MainLayout.razor
@@ -1,5 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
+@namespace EtAlii.BinanceMagic.Service
+
 <Layout Sider="true">
     <LayoutSider>
         <NavMenu/>
