--- a/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
+++ b/EtAlii.BinanceMagic.Service/Shared/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace EtAlii.BinanceMagic.Service.Shared
+@namespace EtAlii.BinanceMagic.Service
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = null;
