--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularView.razor
@@ -1,5 +1,7 @@
 ﻿@page "/circular/view/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits ViewBase<CircularTrading>
 
 <Row Margin="Margin.Is4">
