--- a/EtAlii.BinanceMagic.Service/Trading/Experimental/ExperimentalEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Experimental/ExperimentalEdit.razor
@@ -1,5 +1,7 @@
 ﻿@page "/experimental/edit/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits EditBase<ExperimentalTrading> 
 
 <Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
