--- a/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/OneOff/OneOffEdit.razor
@@ -1,5 +1,7 @@
 ﻿@page "/one-off/edit/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits EditBase<OneOffTrading> 
 
 <Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
