--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
@@ -1,5 +1,7 @@
 ﻿@page "/simple/view/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits ViewBase<SimpleTrading>
 
 <Row Margin="Margin.Is4">
