--- a/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
-﻿@using EtAlii.BinanceMagic.Service.Trading
+﻿@namespace EtAlii.BinanceMagic.Service
+
 @inject AlgorithmManager _algorithmManager
 
 <LayoutSiderContent>
