--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularEdit.razor
@@ -1,5 +1,7 @@
 ﻿@page "/circular/edit/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits EditBase<CircularTrading> 
 
 <Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
