--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleEdit.razor
@@ -1,5 +1,7 @@
 ﻿@page "/simple/edit/{id?}"
 
+@namespace EtAlii.BinanceMagic.Service
+
 @inherits EditBase<SimpleTrading> 
 
 <Validations @ref="Validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@EditContext">
