--- a/EtAlii.BinanceMagic.Service/Trading/Transaction.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Transaction.razor
@@ -1,4 +1,6 @@
 ﻿
+@namespace EtAlii.BinanceMagic.Service
+
 <Card Color="Color.Secondary">
     <Icon Name="IconName.Clock" />    
 @* <div class="alert alert-secondary mt-4" role="alert"> *@
