Leaps towards operational circular trading.

--- a/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
+++ b/EtAlii.BinanceMagic.Service/Shared/NavMenu.razor
@@ -31,7 +31,7 @@
                     <BarDropdown>
                         <BarDropdownToggle>
                             <BarIcon IconName="@("fa-chart-line")" />
-                            One-off trades
+                            One-off
                         </BarDropdownToggle>
                         <BarDropdownMenu>
                             <Repeater Items="@OneOffTradings">
@@ -51,7 +51,7 @@
                     <BarDropdown>
                         <BarDropdownToggle>
                             <BarIcon IconName="@("fa-chart-bar")" />
-                            Simple trades
+                            Simple
                         </BarDropdownToggle>
                         <BarDropdownMenu>
                             <Repeater Items="@SimpleTradings">
@@ -71,7 +71,7 @@
                     <BarDropdown>
                         <BarDropdownToggle>
                             <BarIcon IconName="@("fa-infinity")"/>
-                            Circular trades
+                            Circular
                         </BarDropdownToggle>
                         <BarDropdownMenu>
                             <Repeater Items="@CircularTradings">
@@ -91,7 +91,7 @@
                     <BarDropdown>
                         <BarDropdownToggle>
                             <BarIcon IconName="@("fa-flask")" />
-                            Experimental trades 
+                            Experimental 
                         </BarDropdownToggle>
                         <BarDropdownMenu>
                             <Repeater Items="@ExperimentalTradings">
