--- a/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Simple/SimpleView.razor
@@ -2,7 +2,7 @@
 
 @namespace EtAlii.BinanceMagic.Service
 
-@inherits ViewBase<SimpleTrading>
+@inherits ViewBase<SimpleTrading, SimpleAlgorithmRunner>
 
 <Row Margin="Margin.Is4">
     <Column ColumnSize="ColumnSize.Is1">
