--- a/EtAlii.BinanceMagic.Service/Trading/Circular/CircularView.razor
+++ b/EtAlii.BinanceMagic.Service/Trading/Circular/CircularView.razor
@@ -6,13 +6,13 @@
 
 <Row Margin="Margin.Is4">
     <Column ColumnSize="ColumnSize.Is1">
-        <Blazorise.Button Color="Color.Primary">
+        <Blazorise.Button Color="Color.Primary" Type="ButtonType.Link" Size="Size.Small">
             <Icon Name="IconName.Pause" />
             Pause
         </Blazorise.Button>
     </Column>
     <Column ColumnSize="ColumnSize.Is1">
-        <Blazorise.Button Color="Color.Secondary" Type="ButtonType.Link" To="@($"/circular/edit/{Id}")">
+        <Blazorise.Button Color="Color.Secondary" Type="ButtonType.Link" To="@($"/circular/edit/{Id}")" Size="Size.Small">
             <Icon Name="@("fa-wrench")"/>
             Change
         </Blazorise.Button>
@@ -47,15 +47,15 @@
                     <TableRow>
                         <TableRowCell>Sell: </TableRowCell><TableRowCell>@Decimal(Current.SellPrice, "+") @Current.ReferenceSymbol</TableRowCell>
                         <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Decimal(Current.SellQuantity, "+") @Current.SellSymbol</TableRowCell>
-                        <TableRowCell>Trend: </TableRowCell><TableRowCell>@Current.SellTrend</TableRowCell>
+                        <TableRowCell>Trend: </TableRowCell><TableRowCell><span style="@SellTrendStyle">@DecimalShort(Current.SellTrend)</span></TableRowCell>
                     </TableRow>
                     <TableRow>
                         <TableRowCell>Buy: </TableRowCell><TableRowCell>@Decimal(Current.BuyPrice, "-") @Current.ReferenceSymbol</TableRowCell>
                         <TableRowCell>Quantity: </TableRowCell><TableRowCell>@Decimal(Current.BuyQuantity, "-") @Current.BuySymbol</TableRowCell>
-                        <TableRowCell>Trend: </TableRowCell><TableRowCell>@Current.BuyTrend</TableRowCell>
+                        <TableRowCell>Trend: </TableRowCell><TableRowCell><span style="@BuyTrendStyle">@DecimalShort(Current.BuyTrend)</span></TableRowCell>
                     </TableRow>
                     <TableRow>
-                        <TableRowCell>Diff: </TableRowCell><TableRowCell>@Decimal(Current.Difference) @Current.ReferenceSymbol</TableRowCell>
+                        <TableRowCell>Diff: </TableRowCell><TableRowCell><span style="@DifferenceStyle">@Decimal(Current.Difference) @Current.ReferenceSymbol</span></TableRowCell>
                         <TableRowCell>Target: </TableRowCell><TableRowCell>@Decimal(Current.Target, "+") @Current.ReferenceSymbol</TableRowCell>
                         <TableRowCell></TableRowCell><TableRowCell></TableRowCell>
                     </TableRow>
