--- a/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
+++ b/EtAlii.BinanceMagic.Service/Configuration/Settings.razor
@@ -3,6 +3,7 @@
 @namespace EtAlii.BinanceMagic.Service
 
 @inject IJSRuntime _jsRuntime;
+@inject ApplicationContext _applicationContext;
 
 <Validations @ref="_validations" Mode="ValidationMode.Auto" ValidateOnLoad="false" EditContext="@_editContext">
 <Row>
@@ -32,7 +33,6 @@
                             <FieldLabel>Binance secret key</FieldLabel>
                             <TextEdit 
                                 Placeholder="Secret key" 
-                                Autofocus="true"
                                 @bind-Text="@_model.BinanceSecretKey">
                                 <Feedback>
                                     <ValidationError>Enter Binance secret key.</ValidationError>
@@ -46,7 +46,6 @@
                             <FieldLabel>Reference symbol</FieldLabel>
                             <TextEdit 
                                 Placeholder="Symbol" 
-                                Autofocus="true"
                                 @bind-Text="@_model.ReferenceSymbol">
                                 <Feedback>
                                     <ValidationError>Enter reference symbol.</ValidationError>
